<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="su.aly.alysuchka.ui.home.HomeFragment"
        android:label="@string/menu_label_alysuchka" />

    <fragment
        android:id="@+id/nav_mudozvon"
        android:name="su.aly.alysuchka.ui.mudozvon.MudozvonFragment"
        android:label="@string/menu_label_mudozvon" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="su.aly.alysuchka.ui.contacts.ContactsFragment"
        android:label="@string/menu_label_contscts" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="su.aly.alysuchka.ui.gallery.GalleryFragment"
        android:label="@string/menu_label_panel1" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="su.aly.alysuchka.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_label_panel2" />

    <fragment
        android:id="@+id/nav_test"
        android:name="su.aly.alysuchka.ui.test.TestFragment"
        android:label="@string/menu_label_panel3" />

</navigation>
